# rust-js-wasm-template

./: .bumpversion.cfg  .gitignore  LICENSE  Makefile  README.md
.github/workflows/: build.yml
js/: .jestrc.js  Cargo.toml  package.json
js/src/js/: index.js
js/src/rust/: lib.rs
js/tests/: import.test.js
python/: Cargo.toml  Makefile  pyproject.toml
python/rust_js_wasm/: __init__.py
python/rust_js_wasm/tests/: test_all.py
python/src/: lib.rs
rust/: Cargo.toml  Makefile
